--- a/style.css
+++ b/style.css
@@ -1,51 +1,91 @@
+/* Tạo font-face Liberation Mono vì nó đéo có sẵn trên Google Font nhưng mà ny tôi thích font này và tôi chiều anh ý :)) */
+
+@font-face {
+    font-family: 'Liberation Mono';
+    src: url('./fonts/liberation_mono/LiberationMono-Regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* global var config */
+:root{
+    --bg-color: #020202;
+    --typewriterSpeed: 5s;
+    --typewriterCharacters: 14;
+}
+
 * {
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
-    font-family: "Raleway", sans-serif;
 }
 
 body {
-    background: #020202;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+    min-height: 100vh;
+    /* display: grid; */
+    place-content: center;
     text-align: center;
+    background: var(--bg-color);
     cursor: crosshair;
 }
 
 canvas {
     display: block;
-    z-index: -999;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -99;
 }
 
-.happy-birthday {
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font-size: clamp(2rem, 3vw, 5rem);
-    font-weight: 900;
+h1 {
+    font-family: "Liberation Mono", monospace;
+    font-size: clamp(1rem, 3vw + 1rem, 4rem);
+    position: relative;
+    width: max-content;
     -webkit-user-select: none;
     user-select: none;
+    color: #fff;
+    margin: auto;
 }
 
-.wishes {
+h1::before,
+h1::after{
+    content: "";
     position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font-size: clamp(1rem, 2vw, 1.5rem);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+h1::before{
+    background: var(--bg-color);
+    animation:
+        typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards;
+}
+
+h1::after{
+    width: 0.125em;
+    background: #fff;
+    animation:
+        typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards,
+        blink 750ms steps(18) infinite;
+}
+
+p {
+    font-size: clamp(0.95rem, 3vw + 1rem, 1rem);
     font-weight: 400;
+    opacity: 0;
+    transform: translateY(3rem);
+    animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards;
+    color: #fff;
     -webkit-user-select: none;
     user-select: none;
 }
 
-.from-thespacebard {
+/* .from-thespacebard {
     position: absolute;
     bottom: 20%;
     left: 50%;
@@ -55,16 +95,33 @@ canvas {
     font-weight: 400;
     -webkit-user-select: none;
     user-select: none;
-}
-
-i {
-    color: #fff;
-}
+} */
 
 
-@media screen and (max-width: 64em) {
-  h1, p {
-    max-width: 80vw;
-    margin: auto;
-  }
+
+/* animation typewriter effect */
+@keyframes typewriter {
+    to {
+        left: 100%;
+    }
 }
+
+/* carat blinking effect */
+@keyframes blink {
+    to {
+        background: transparent;
+    }
+}
+
+
+/* subtitles fading in */
+
+@keyframes fadeInUp {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+
