--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 
 body {
     margin: 0;
-    font-family: "Hack", monospace;
+    font-family: "Space Mono", monospace;
     min-height: 100vh;
     display: grid;
     place-content: center;
