--- a/style.css
+++ b/style.css
@@ -16,17 +16,42 @@
 
 /* global var config */
 :root{
-    --bg-color: #1A223D;
     --typewriterSpeed: 5s;
     --typewriterCharacters: 14;
+    --bg-color: #0A0817;
+    --text-color: #fff;
+    --text-cover-color: #090715;
 }
+
+.light-theme {
+    --bg-color: #A1C9FB;
+    --text-color: #171A21;
+    --text-cover-color: #A1C9FB;
+}
+
+.dark-theme {
+    --bg-color: #0A0817;
+    --text-color: #fff;
+    --text-cover-color: #090715;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    *,
+    *::before,
+    *::after {
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.01ms !important;
+        scroll-behavior: auto !important;
+        transition-delay: 0 !important;
+    }
+}
+
 
 
 * {
     box-sizing: border-box;
 }
-
-
 
 body {
     margin: 0;
@@ -36,12 +61,11 @@ body {
     place-content: center;
     text-align: center;
     cursor: crosshair;
-    background: var(--bg-color);
     height: 100%;
     overflow: hidden;
+    color: var(--text-color);
+    background: var(--bg-color);
 }
-
-
 
 canvas {
     display: block;
@@ -49,8 +73,8 @@ canvas {
     height: 100%;
     position: absolute;
     z-index: -99;
+    background: var(--bg-color);
 }
-
 
 h1 {
     font-family: "Liberation Mono", monospace;
@@ -60,7 +84,6 @@ h1 {
     width: max-content;
     -webkit-user-select: none;
     user-select: none;
-    color: #fff;
     margin: auto;
 }
 
@@ -75,17 +98,17 @@ h1::after{
 }
 
 h1::before{
-    background: var(--bg-color);
     animation:
         typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards;
+    background: var(--text-cover-color);
 }
 
-h1::after{
+h1::after {
     width: 0.125em;
-    background: #fff;
     animation:
         typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards,
         blink 750ms steps(18) infinite;
+    background: var(--text-color);
 }
 
 p {
@@ -95,11 +118,54 @@ p {
     opacity: 0;
     transform: translateY(3rem);
     animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards;
-    color: #fff;
     -webkit-user-select: none;
     user-select: none;
     max-width: 80vw;
     margin: auto;
+}
+
+/* theme toggle button */
+#theme-toggle{
+    position:fixed;
+    cursor: pointer;
+    background: 0;
+    border: 0;
+    opacity: 0.8;
+    padding: 0.5rem;
+    border-radius: 5px;
+    isolation: isolate;
+    top: 0.75rem;
+    right: 1.5rem;
+    z-index: 10;
+}
+
+
+#theme-toggle svg {
+  fill: var(--text-color);
+}
+
+#theme-toggle:hover,
+#theme-toggle:focus {
+  outline: 0;
+  opacity: 1;
+}
+
+
+.toggle-circle {
+  transition: transform 250ms ease-out;
+}
+
+.light-theme .toggle-circle {
+  transform: translateX(-15%);
+}
+
+.toggle-sun {
+  transform-origin: center;
+  transition: transform 750ms cubic-bezier(0.11, 0.14, 0.29, 1.32);
+}
+
+.light-theme .toggle-sun {
+  transform: rotate(0.5turn);
 }
 
 
