--- a/style.css
+++ b/style.css
@@ -49,7 +49,9 @@
 
 
 
-* {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
@@ -82,7 +84,9 @@ h1 {
     font-size: clamp(1rem, 3vw + 1rem, 4rem);
     position: relative;
     width: max-content;
-    -webkit-user-select: none;
+    -moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
     user-select: none;
     margin: auto;
 }
@@ -118,7 +122,9 @@ p {
     opacity: 0;
     transform: translateY(3rem);
     animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 2s) forwards;
-    -webkit-user-select: none;
+    -moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
     user-select: none;
     max-width: 80vw;
     margin: auto;
