--- a/style.css
+++ b/style.css
@@ -128,6 +128,14 @@ p {
     user-select: none;
     max-width: 80vw;
     margin: auto;
+    -webkit-touch-callout: none;
+    -moz-touch-callout: none;
+    -ms-touch-callout: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+    text-decoration: none;
+    color: inherit;
 }
 
 .heart {
