--- a/style.css
+++ b/style.css
@@ -134,16 +134,6 @@ p {
     color: inherit;
 }
 
-/*
-.heart {
-    position: fixed;
-    font-size: 1rem;
-    top: -1vh;
-    transform: translateY(0);
-    animation: fall 3s linear forwards;
-}
-*/
-
 
 /* leaves animation */
 .falling-leaves {
@@ -157,7 +147,7 @@ p {
     height: 100%;
     background: var(--bg-color);
     z-index: -99;
-    background: url(https://cdn.dribbble.com/users/3399110/screenshots/8352973/media/c13f95befd51386be5932edec429be98.png) no-repeat center center;
+    background: url(./img/day_bg.png) no-repeat center center;
     background-size: cover;
     overflow: hidden;
 }
@@ -177,7 +167,7 @@ p {
     left: 0;
     width: 20px;
     height: 20px;
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/125707/leaf.svg) no-repeat;
+    background: url(./img/leaf.svg) no-repeat;
     background-size: 100%;
     transform-style: preserve-3d;
     backface-visibility: visible;
